# styx-oss

./: .env.example  .env.production.example  .gitignore  DEPLOY.md  LICENSE  README.md  package-lock.json  package.json  setup.js
.github/workflows/: build.yml  ci.yml
client/: app.js  config.js  index.html  style.css
docs/: AUDIO_INNOVATION_IDEAS.md  AWS_LIGHTSAIL_DEPLOY.md  DEPLOY_GUIDE.md  FEATURE_AUDIT.md  FUTURE_IMPROVEMENTS.md  HADES_STYX_소개.md  LOW_LATENCY_SETUP.md  MODULE_ARCHITECTURE.md  ORACLE_CLOUD_DEPLOY.md  README.md  ROADMAP.md  TESTING_GUIDE.md  UI_OPTIONS_AUDIT.md  USER_MANUAL.md  USER_MANUAL_PLAIN.txt  possible_improvements.md
docs/archive/: PHASE8_PLAN.md
docs/development/: API.md  CODE_REVIEW_2026-01-16.md  MODULE_ARCHITECTURE.md
docs/guides/: AWS_LIGHTSAIL_DEPLOY.md  DISCORD_GUIDE.md  TESTING_GUIDE.md
docs/release-notes/: RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.2.md  RELEASE_NOTES_v1.4.3.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.5.1.md  RELEASE_NOTES_v1.5.2.md
key/: ssh-key-2025-12-17.key  ssh-key-2025-12-17.key.pub
scripts/: setup-windows.ps1
server/: config.js  index.js  index.old.js  sfu.js
server/handlers/: socket.js
server/middleware/: security.js
server/services/: rooms.js  sessions.js  (+2 more)
styx-desktop/: README.md  build-windows.bat  build.bat  build.sh
styx-desktop/src-tauri/: Cargo.toml  firewall-setup.ps1  installer.nsh  tauri.conf.json
styx-desktop/src-tauri/capabilities/: default.json
styx-desktop/src-tauri/src/: audio.rs  lib.rs  peer.rs  stream.rs  udp.rs
(+41 files in other folders)
