[package]
name = "styx-desktop"
version = "1.0.3"
description = "Styx - HADES Real-time Audio Collaboration"
authors = ["HADES"]
license = "MIT"
repository = "https://github.com/haemoolpa-jeon/styx"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"

# 오디오 처리
cpal = "0.15"
ringbuf = "0.4"
opus = "0.3"

# UDP 네트워킹
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "macros", "time"] }
socket2 = "0.5"
